--- a/src/app/main-display/main-display.component.css
+++ b/src/app/main-display/main-display.component.css
@@ -29,7 +29,8 @@ mat-spinner, .mat-progress-spinner circle, .mat-spinner circle {
 add [@.disabled]="true" to mat-tab-group in chart-display.html
 for fade animation.
 For regular Angular swiping animation, remove the above
-& comment through @keyframes code below */
+& comment through @keyframes code below
+*/
 
 .mat-tab-body.mat-tab-body-active {
   animation: fade 0.5s;
@@ -143,4 +144,8 @@ h6 {
   ::-webkit-scrollbar-thumb:hover {
     /* Handle on hover */
     background: #970a1d;
+  }
+
+  .sideRow.savedRow {
+    height: 30%
   }
